--- a/views/stock_view.xml
+++ b/views/stock_view.xml
@@ -7,8 +7,8 @@
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
-                <field name="backorder_id" position="after">
-                    <field name="cuenta_analitica"/>
+                <field name="origin" position="after">
+                    <field name="cuenta_analitica_id"/>
                 </field>
             </field>
         </record>
