--- a/views/stock_view.xml
+++ b/views/stock_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
 
         <record id="view_picking_form_albaran_analitico" model="ir.ui.view">
@@ -13,5 +13,16 @@
             </field>
         </record>
 
+        <record id="view_inventory_form_albaran_analitico" model="ir.ui.view">
+            <field name="name">stock.inventory.form.albaran_analitico</field>
+            <field name="model">stock.inventory</field>
+            <field name="inherit_id" ref="stock.view_inventory_form"/>
+            <field name="arch" type="xml">
+                <field name="exhausted" position="after">
+                    <field name="cuenta_analitica_id"/>
+                </field>
+            </field>
+        </record>
+
     </data>
-</openerp>
+</odoo>
