--- a/views/stock_view.xml
+++ b/views/stock_view.xml
@@ -18,7 +18,7 @@
             <field name="model">stock.inventory</field>
             <field name="inherit_id" ref="stock.view_inventory_form"/>
             <field name="arch" type="xml">
-                <field name="exhausted" position="after">
+                <field name="company_id" position="before">
                     <field name="cuenta_analitica_id"/>
                 </field>
             </field>
